--- a/hw12_13_14_15_calendar/configs/config.yaml
+++ b/hw12_13_14_15_calendar/configs/config.yaml
@@ -1,3 +1,11 @@
 env: "local"
 logger:
   level: "INFO"
+storage:
+  type: "MEMORY" # MEMORY | SQL
+db:
+  host: "localhost"
+  port: "5432"
+  database: "calendar"
+  username: "postgres"
+  password: "159753"
