--- a/hw12_13_14_15_calendar/Makefile
+++ b/hw12_13_14_15_calendar/Makefile
@@ -5,10 +5,11 @@ GIT_HASH := $(shell git log --format="%h" -n 1)
 LDFLAGS := -X main.release="develop" -X main.buildDate=$(shell date -u +%Y-%m-%dT%H:%M:%S) -X main.gitHash=$(GIT_HASH)
 
 build:
+	@echo "Building the project..."
 	go build -v -o $(BIN) -ldflags "$(LDFLAGS)" ./cmd/calendar
 
 run: build
-	$(BIN) -config ./configs/config.toml
+	$(BIN) -config ./configs/config.yaml
 
 build-img:
 	docker build \
@@ -31,8 +32,6 @@ install-lint-deps:
 lint: install-lint-deps
 	golangci-lint run ./...
 
+
 .PHONY: build run build-img run-img version test lint
 
-
-
-#GOOSE_DRIVER=postgres GOOSE_DBSTRING="postgres://postgres:159753@localhost:5432/calendar" goose up
