--- a/hw12_13_14_15_calendar/configs/config.yaml
+++ b/hw12_13_14_15_calendar/configs/config.yaml
@@ -2,7 +2,7 @@ env: "local"
 logger:
   level: "INFO"
 storage:
-  type: "MEMORY" # MEMORY | SQL
+  type: "MEMORY" # MEMORY / SQL
 db:
   host: "localhost"
   port: "5432"
