--- a/hw12_13_14_15_calendar/configs/config.yaml
+++ b/hw12_13_14_15_calendar/configs/config.yaml
@@ -2,7 +2,7 @@ env: "local"
 logger:
   level: "INFO"
 storage:
-  type: "MEMORY" # MEMORY / SQL
+  type: "SQL" # MEMORY / SQL
 db:
   host: "localhost"
   port: "5432"
@@ -12,3 +12,5 @@ db:
 http:
   host: "0.0.0.0"
   port: "8080"
+grpc:
+  port: "50051"
