--- a/hw12_13_14_15_calendar/configs/config.yaml
+++ b/hw12_13_14_15_calendar/configs/config.yaml
@@ -9,6 +9,13 @@ db:
   database: "calendar"
   username: "postgres"
   password: "159753"
+rabbit:
+  user: "user"
+  password: "password"
+  port: "5672"
+  host: "localhost"
+scheduler:
+  interval: "1s"
 http:
   host: "0.0.0.0"
   port: "8080"
